@@ -347,19 +347,17 @@ table.g-albums-table .g-albumdesc-cell {
 /* set width of widget here*/
 .YUIsearchdiv {
     position: relative;
-
+    margin-top: 1px;
     z-index: 9001; /* for IE z-index of absolute divs inside relative divs issue */
 }
 
 .YUIsearchinput {
-    position: relative; display: block;
+    width: 350px;
 }
 
 /* For border edit .yui-ac-content class */
 .YUIsearchcontainer {
-    position: absolute;
-    top: 1.7em;
-    width: 100%;
+    width: 350px;
 }
 
 .YUIsearchcontainer .yui-ac-content  {
@@ -373,18 +371,18 @@ table.g-albums-table .g-albumdesc-cell {
 
 .YUIsearchcontainer .yui-ac-shadow {
     position: absolute;
-    margin: 5px;
     width: 100%;
-    background: #dcdcdc;
-    z-index:9049;
+    margin: 5px;
+    background: #acaca0c;
+    z-index: 9049;
 }
 
 /* The inner list */
 .YUIsearchcontainer ul {
+    width: 100%;
     margin: 2px 0;
     padding: 0;
     list-style: none ;
-    width: 100%;
 }
 
 /* The matching lines */
