@@ -1,3 +1,7 @@
+2006-10-10 Jens Tkotz <jens@peino.de> 1.6-svn-b19
+
+ * Fix: More code and CSS adjustments for autocomplete.
+
 2006-10-09 Jens Tkotz <jens@peino.de> 1.6-svn-b18
 
  * Fix: Code and CSS adjustments to new yui! version.
